--- a/game/Cargo.toml
+++ b/game/Cargo.toml
@@ -6,4 +6,6 @@ edition = "2021"
 [dependencies]
 wasm-bindgen = "0.2"
 crossterm = "0.28"
+serde_json = "1"
+serde = { version = "1", features = ["derive"] }
 
