--- a/game/Cargo.toml
+++ b/game/Cargo.toml
@@ -8,4 +8,6 @@ wasm-bindgen = "0.2"
 crossterm = "0.28"
 serde_json = "1"
 serde = { version = "1", features = ["derive"] }
+dirs = "5"
+base64 = "0.22"
 
