--- a/game/Cargo.toml
+++ b/game/Cargo.toml
@@ -10,4 +10,6 @@ serde_json = "1"
 serde = { version = "1", features = ["derive"] }
 dirs = "5"
 base64 = "0.22"
+uuid = { version = "1", features = ["v4"] }
+chrono = "0.4"
 
