--- a/game/Cargo.toml
+++ b/game/Cargo.toml
@@ -2,6 +2,12 @@
 name = "terminal_rpg"
 version = "0.1.0"
 edition = "2021"
+description = "Terminal based game."
+readme = "../README.md"
+license = "GPL-3.0 license"
+repository = "https://github.com/hollowdll/terminal-game"
+keywords = ["terminal", "game", "tui"]
+categories = ["command-line-interface"]
 
 [dependencies]
 crossterm = "0.28"
@@ -12,4 +18,3 @@ base64 = "0.22"
 uuid = { version = "1", features = ["v4"] }
 chrono = "0.4"
 rand = "0.8.5"
-
