--- a/game/Cargo.toml
+++ b/game/Cargo.toml
@@ -4,7 +4,7 @@ version = "0.1.1"
 edition = "2021"
 description = "TUI game for the terminal."
 readme = "../README.md"
-license = "GPL-3.0 license"
+license = "GPL-2.0-or-later"
 repository = "https://github.com/hollowdll/terminal-game"
 keywords = ["terminal", "game", "tui"]
 categories = ["command-line-interface"]
